WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258255
[pointer-events] Fix scrolling on nested pointer-events: auto inside pointer-events: none
https://bugs.webkit.org/show_bug.cgi?id=258255
Summary
[pointer-events] Fix scrolling on nested pointer-events: auto inside pointer-...
Tim Nguyen (:ntim)
Reported
2023-06-17 17:50:29 PDT
Created
attachment 466744
[details]
Testcase See test case. WPT:
https://wpt.fyi/results/pointerevents/pointerevent_hit_test_scroll_visible_descendant.html?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned&view=interop&q=label%3Ainterop-2023-events
Attachments
Testcase
(282 bytes, text/html)
2023-06-17 17:50 PDT
,
Tim Nguyen (:ntim)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-17 17:50:39 PDT
<
rdar://problem/110954175
>
Matthieu Dubet
Comment 2
2023-10-06 15:39:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18790
EWS
Comment 3
2023-11-01 17:01:18 PDT
Committed
270094@main
(2b7aa256562d): <
https://commits.webkit.org/270094@main
> Reviewed commits have been landed. Closing PR #18790 and removing active labels.
Tim Nguyen (:ntim)
Comment 4
2024-01-08 03:38:08 PST
***
Bug 183870
has been marked as a duplicate of this bug. ***
Matthieu Dubet
Comment 5
2024-02-27 14:57:36 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/25195
Alex
Comment 6
2024-10-14 02:03:22 PDT
I'm trying to create a bottomsheet style drawer, the container has `pointer-events: none` so I can tap through it, but the sheet itself has `pointer-events: auto` so I can drag it with my finger, effectively scrolling the container:
https://codepen.io/waterplea/pen/XWvMXxG
It is working as expected on Android, I can tap and drag blue area and nothing happens and I can drag pink one with my finger. In iOS it does not work. Am I right in my understanding that this issue is about the same thing and will be soon fixed?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug